--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       <div id="title">
 	<br />
     	<h1>Chris Miller, PhD</h1>
-    	<h2>Analysis Manager - Cancer Genomics</h2>
-    	<h2>The Genome Institute at Washington University</h2>
+	<h2>Research Faculty - Division of Genomics and Bioinformatics</h2>
+	<h2>Cancer Analysis Group Leader - McDonnell Genome Institute</h2>
+	<h2>Washington University School of Medicine</h2>
       </div>
       <div id="contact">
 	<a href="mailto:chrisamiller@gmail.com">chrisamiller@gmail.com</a><br />
@@ -32,17 +33,17 @@
 
 
     <div class="twoColContainer">
-    <hr/>
+    <hr>
     <div class="leftcol">
-      <h3>About Me</h3>
-    </div>
-    <div class="rightcol">
-      <p>I work in the Genome Institute at Washington University in St. Louis, 
-	where I lead a group that develops and applies computational tools 
-	to give us insight into the origins and progression of cancer.
-      </p><p>
-        My core research interests include:
-        <ul>
+	<h3>About Me</h3>
+      </div>
+      <div class="rightcol">
+	<p>I work in the Genome Institute at Washington University in St. Louis, 
+	  where I lead a group that develops and applies computational tools 
+	  to give us insight into the origins and progression of cancer.
+	  </p><p>
+          My core research interests include:
+          <p>
   	  <li>Cancer - studying the genomic alterations that result in tumorigenesis</li>
           <li>The clonal architecture of tumors and how they evolve in response to therapy</li>
   	  <li>Integrative analysis to place genomic aberrations into a functional context</li>
@@ -50,8 +51,7 @@
   	  <li>Developing open-source software for integrating, mining, and visualizing genomic data</li>
   	  <li>Utilizing online technologies to drive science communication and collaboration</li>
 	</ul>
-      </p>
-    </div>
+      </div>
     </div>
 
 
@@ -83,12 +83,6 @@
       </div>
       <div class="rightcol">
         <ul>
-<li class="pub"><a href="http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003665">Sciclone: Inferring clonal architecture and tracking the spatial and temporal patterns of tumor evolution</a><br />
-<span class="pubdetails"><strong>Miller CA</strong>, White BS, Dees ND, Griffith M, Welch JS, Griffith OL, Vij R, Tomasson MH, Graubert TA, Walter MJ, <em>et al.</em>. PLoS Computational Biology.doi:10.1371/journal.pcbi.1003665</span>
-</li>
-<li class="pub"><a href="http://www.plosgenetics.org/article/info%3Adoi%2F10.1371%2Fjournal.pgen.1004462#pgen-1004462-g005">Clonal architecture of secondary acute myeloid leukemia defined by single-cell sequencing</a><br />
-<span class="pubdetails">Hughes AE, Magrini V, Demeter R, <strong>Miller CA</strong>, Fulton R, Fulton LL, Eades WC, Elliott K, Heath S, Westervelt P, <em>et al.</em>. PLoS Genetics.doi:10.1371/journal.pgen.1004462</span>
-</li>
 <li class="pub"><a href="http://www.cell.com/cancer-cell/fulltext/S1535-6108(14)00054-3">Functional Heterogeneity of Genetically Defined Subclones in Acute Myeloid Leukemia</a><br />
 <span class="pubdetails">Klco JM, Spencer DH, <strong>Miller CA</strong>, Griffith M, Lamprecht TL, O’Laughlin M, Fronick C, Magrini V, Demeter RT, Fulton RS, <em>et al.</em>. Cancer Cell.doi:10.1016/j.ccr.2014.01.031</span>
 </li>
@@ -214,7 +208,9 @@
       </div>
       <div class="rightcol">
       <ul>
-	<li>Computer Aided Discovery Methods (2007 and 2008)<br />
+	  <li>Guest Lecture - Investigating Eukaryotic Genomes (2015)</li>
+	  <li>Guest Lecture - Molecular Basis of Heredity (2015)</li>
+	  <li>Computer Aided Discovery Methods (2007 and 2008)<br />
 	  Contributed to the development of the course and taught computational labs on:
 	  <ul>
 	    <li id="sub">Studies of genome variation</li>
