adding jama pub

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
       </div>
       <div class="rightcol">
         <ul>
+<li class="pub"><a href="https://jama.jamanetwork.com/article.aspx?articleid=2429715">Association Between Mutation Clearance After Induction Therapy and Outcomes in Acute Myeloid Leukemia</a><br />
+<span class="pubdetails">Klco JM, <strong>Miller CA</strong>, Griffith M, Petti A, Spencer DH, Ketkar-Kulkarni S, Wartman LD, Christopher M, Lamprecht TL, Helton NM, <em>et al.</em>. Jama.doi:10.1001/jama.2015.9643</span>
+</li>
 <li class="pub"><a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004274">Genome Modeling System: A Knowledge Management Platform for Genomics</a><br />
 <span class="pubdetails">Griffith M, Griffith OL, Smith SM, Ramu A, Callaway MB, Brummett AM, Kiwala MJ, Coffman AC, Regier AA, Oberkfell BJ, <em>et al.</em>. PLoS Comput Biol.doi:10.1371/journal.pcbi.1004274</span>
 </li>
