adding pubs, adding shared authorship labels

--- a/index.html
+++ b/index.html
@@ -82,9 +82,14 @@
 	<h3>Publications</h3>
       </div>
       <div class="rightcol">
+
+        <span style="font-size:x-small"><br /><em>* denotes shared first authorship</em></span>
         <ul>
+<li class="pub"><a href="http://www.cell.com/cell-systems/abstract/S2405-4712(15)00113-1">Optimizing Cancer Genome Sequencing and Analysis</a><br />
+<span class="pubdetails">Griffith M*, <strong>Miller CA*</strong>, Griffith OL, Krysiak K, Skidmore ZL, Ramu A, Walker JR, Dang HX, Trani L, Larson DE, <em>et al.</em>. Cell Systems.doi:10.1016/j.cels.2015.08.015</span>
+</li>
 <li class="pub"><a href="https://jama.jamanetwork.com/article.aspx?articleid=2429715">Association Between Mutation Clearance After Induction Therapy and Outcomes in Acute Myeloid Leukemia</a><br />
-<span class="pubdetails">Klco JM, <strong>Miller CA</strong>, Griffith M, Petti A, Spencer DH, Ketkar-Kulkarni S, Wartman LD, Christopher M, Lamprecht TL, Helton NM, <em>et al.</em>. Jama.doi:10.1001/jama.2015.9643</span>
+<span class="pubdetails">Klco JM*, <strong>Miller CA*</strong>, Griffith M, Petti A, Spencer DH, Ketkar-Kulkarni S, Wartman LD, Christopher M, Lamprecht TL, Helton NM, <em>et al.</em>. Jama.doi:10.1001/jama.2015.9643</span>
 </li>
 <li class="pub"><a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004274">Genome Modeling System: A Knowledge Management Platform for Genomics</a><br />
 <span class="pubdetails">Griffith M, Griffith OL, Smith SM, Ramu A, Callaway MB, Brummett AM, Kiwala MJ, Coffman AC, Regier AA, Oberkfell BJ, <em>et al.</em>. PLoS Comput Biol.doi:10.1371/journal.pcbi.1004274</span>
@@ -107,6 +112,9 @@
 <li class="pub"><a href="http://www.nature.com/ncomms/2014/140122/ncomms4156/full/ncomms4156.html">Integrated analysis of germline and somatic variants in ovarian cancer</a><br />
 <span class="pubdetails">Kanchi KL, Johnson KJ, Lu C, McLellan MD, Leiserson MD, Wendl MC, Zhang Q, Koboldt DC, Xie M, Kandoth C, <em>et al.</em>. Nature Communications.doi:10.1038/ncomms4156</span>
 </li>
+<li class="pub"><a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003665">SciClone: inferring clonal architecture and tracking the spatial and temporal patterns of tumor evolution</a><br />
+<span class="pubdetails"><strong>Miller CA*</strong>, White BS*, Dees ND, Griffith M, Welch JS, Griffith OL, Vij R, Tomasson MH, Graubert TA, Walter MJ, <em>et al.</em>. PLoS Comput Biol.doi:10.1371/journal.pcbi.1003665</span>
+</li>
 <li class="pub"><a href="http://www.nejm.org/doi/full/10.1056/NEJMc1308782">Response to 'Genomic Landscapes and Clonality of De Novo AML'</a><br />
 <span class="pubdetails"><strong>Miller CA</strong>, Wilson RK, Ley TJ. New England Journal Of Medicine.doi:10.1056/NEJMc1308782</span>
 </li>
@@ -119,7 +127,7 @@
 <li class="pub"><a href="http://www.nature.com/nmeth/journal/v10/n12/full/nmeth.2689.html">DGIdb: mining the druggable genome</a><br />
 <span class="pubdetails">Griffith M, Griffith OL, Coffman AC, Weible JV, McMichael JF, Spies NC, Koval J, Das I, Callaway MB, Eldred JM, <em>et al.</em>. Nature Methods.doi:10.1038/nmeth.2689</span>
 </li>
-<li class="pub"><a href="http://www.sciencedirect.com/science/article/pii/S2211124713004634">Endocrine-Therapy-Resistant< i> ESR1</i> Variants Revealed by Genomic Characterization of Breast-Cancer-Derived Xenografts</a><br />
+<li class="pub"><a href="http://www.sciencedirect.com/science/article/pii/S2211124713004634">Endocrine-Therapy-Resistant <i>ESR1</i> Variants Revealed by Genomic Characterization of Breast-Cancer-Derived Xenografts</a><br />
 <span class="pubdetails">Li S, Shen D, Shao J, Crowder R, Liu W, Prat A, He X, Liu S, Hoog J, Lu C, <em>et al.</em>. Cell Reports.doi:10.1016/j.celrep.2013.08.022</span>
 </li>
 <li class="pub"><a href="http://genome.cshlp.org/content/23/3/431.long">Somatic neurofibromatosis type 1 (NF1) inactivation characterizes NF1-associated pilocytic astrocytoma</a><br />
