title, pres, updates

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Chris Miller's Curriculum Vitae</title>
 
-  <link rel="stylesheet" href="cv.css" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Cantarell' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="cv.css" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Cantarell' rel='stylesheet' type='text/css' />
 </head>
 
 
@@ -16,12 +16,12 @@
 
     <div id="header">
       <div id="toppic">
-    	<img src="square.png" alt="Chris Miller" id="headshot">
+    	<img src="square.png" alt="Chris Miller" id="headshot" />
       </div>
       <div id="title">
 	<br />
     	<h1>Chris Miller, PhD</h1>
-	<h2>Research Faculty - Division of Genomics and Bioinformatics</h2>
+	<h2>Assistant Professor - Division of Oncology</h2>
 	<h2>Cancer Analysis Group Leader - McDonnell Genome Institute</h2>
 	<h2>Washington University School of Medicine</h2>
       </div>
@@ -33,7 +33,7 @@
 
 
     <div class="twoColContainer">
-    <hr>
+    <hr />
     <div class="leftcol">
 	<h3>About Me</h3>
       </div>
@@ -41,28 +41,31 @@
 	<p>I work in the Genome Institute at Washington University in St. Louis, 
 	  where I lead a group that develops and applies computational tools 
 	  to give us insight into the origins and progression of cancer.
-	  </p><p>
+	</p>
+        <p>
           My core research interests include:
-          <p>
+        </p>
+        <ul>
   	  <li>Cancer - studying the genomic alterations that result in tumorigenesis</li>
           <li>The clonal architecture of tumors and how they evolve in response to therapy</li>
   	  <li>Integrative analysis to place genomic aberrations into a functional context</li>
   	  <li>Structural changes in the human genome and their contributions to disease</li>
   	  <li>Developing open-source software for integrating, mining, and visualizing genomic data</li>
   	  <li>Utilizing online technologies to drive science communication and collaboration</li>
-	</ul>
+	  </ul>
+          <br />
       </div>
     </div>
-
+   
 
     <div class="twoColContainer">
-    <hr>
+    <hr />
       <div class="leftcol">
 	<h3>Education</h3>
       </div>
       <div class="rightcol">
 	<ul>
-	  <li>PhD, Structural and Computational Biology</br />
+	  <li>PhD, Structural and Computational Biology<br />
 	  and Molecular Biophysics program<br />
 	    Baylor College of Medicine<br />
 	    Mentor: Dr. Aleksandar Milosavljevic<br />
@@ -77,7 +80,7 @@
     </div>
 
     <div class="twoColContainer">
-    <hr>
+    <hr />
       <div class="leftcol">
 	<h3>Publications</h3>
       </div>
@@ -181,7 +184,7 @@
 <li class="pub"><a href="http://www.nature.com/nature/journal/v481/n7382/full/nature10738.html">Clonal evolution in relapsed acute myeloid leukaemia revealed by whole-genome sequencing</a><br />
 <span class="pubdetails">Ding L, Ley TJ, Larson DE, <strong>Miller CA</strong>, Koboldt DC, Welch JS, Ritchey JK, Young MA, Lamprecht T, McLellan MD, <em>et al.</em>. Nature.doi:10.1038/nature10738</span>
 </li>
-<li class="pub"><a href="http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1002216">BioStar: an online question & answer resource for the bioinformatics community</a><br />
+<li class="pub"><a href="http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1002216">BioStar: an online question and answer resource for the bioinformatics community</a><br />
 <span class="pubdetails">Parnell LD, Lindenbaum P, Shameer K, Dall'Olio GM, Swan DC, Jensen LJ, Cockell SJ, Pedersen BS, Mangan ME, <strong>Miller CA</strong>, <em>et al.</em>. PLoS Computational Biology.doi:10.1371/journal.pcbi.1002216</span>
 </li>
 <li class="pub"><a href="http://www.sciencedirect.com/science/article/pii/S2210776211001943">Long-range massively parallel mate pair sequencing detects distinct mutations and similar patterns of structural mutability in two breast cancer cell lines</a><br />
@@ -208,43 +211,30 @@
 
 
     <div class="twoColContainer">
-    <hr>
+    <hr />
       <div class="leftcol">
-	<h3>Posters and Presentations</h3>
+	<h3>Presentations</h3>
       </div>
       <div class="rightcol">
 	<ul>
+          <li>Genomic insights into tumor evolution and therapy response<br />
+            Festival of Genomics Boston (2016)
+            </li>
+          <li>Assessing tumor heterogeneity and tracking clonal clearance in response to therapy<br />
+            Genome Informatics (2015)
+          </li>
+          <li>Ultra-deep whole-genome sequencing reveals clinically relevant low-frequency subclones in an acute myeloid leukemia
+            The Cancer Genome Atlas Symposium (2014)
+          </li>
           <li>
             SciClone: Inferring clonal architecture and tracking the spatial and temporal patterns of tumor evolution and therapy resistance<br />
-            Presentation: Personal Genomes & Pharmacogenomics (2013)
+            Personal Genomes and Pharmacogenomics (2013)
           </li>
-
 	  <li>Multi-dimensional clustering of mutations from heterogeneous tumors offers insight into clonal architecture, tumor evolution, and response to therapy<br />
-	    Presentation: The Cancer Genome Atlas Steering Committee Meeting (2013)
+	    The Cancer Genome Atlas Steering Committee Meeting (2013)
 	  </li>
-
 	  <li>Assessing Tumor Heterogeneity and Tracking Clonal Evolution Using Whole Genome or Exome Sequencing<br />
-	    Presentation: The Cancer Genome Atlas Scientific Symposium (2012) <a href="http://cancergenome.nih.gov/newsevents/multimedialibrary/videos/AssessingMiller2012">link</a>
-          </li>
-
-	  <li>Identification of driver mutations in non-coding functional regions of cancer genomes<br />
-	  Poster: Genome Informatics (2012)
-          </li>
-
-	  <li>Discovering functional modules relevant for cancer progression by identifying patterns of recurrent and mutually exclusive mutations in tumor samples
-	    <br />Poster: CSHL Biology of Genomes (2010)
-          </li>
-
-	  <li>Integrative analysis of multi-dimensional genomic data identifies key relationships between cancer pathways<br />
-	    Poster: SCBMB Retreat (2008)
-          </li>
-
-	  <li>Pash: Efficient Genome-Scale Sequence Anchoring by Positional Hashing
-	    <br />Poster: Rice University Computational Biology Conference (2006)
-          </li>
-
-	  <li> An Image Analytic Approach to Characterizing Vasculogenic Networks
-	    <br />Presentation: Truman State University Student Research Symposium (2005)
+	    The Cancer Genome Atlas Scientific Symposium (2012) <a href="http://cancergenome.nih.gov/newsevents/multimedialibrary/videos/AssessingMiller2012">link</a>
           </li>
         </ul>
       </div>
@@ -252,7 +242,7 @@
 
 
     <div class="twoColContainer">
-    <hr>
+    <hr />
       <div class="leftcol">
       <h3>Teaching</h3>
       </div>
@@ -263,18 +253,18 @@
 	  <li>Computer Aided Discovery Methods (2007 and 2008)<br />
 	  Contributed to the development of the course and taught computational labs on:
 	  <ul>
-	    <li id="sub">Studies of genome variation</li>
-	    <li id="sub">Transcriptional regulatory pathways</li>
+	    <li class="sub">Studies of genome variation</li>
+	    <li class="sub">Transcriptional regulatory pathways</li>
 	  </ul>
 	</li>
 	<li>Computational Mathematics for Biomedical Scientists (2008)
 	  <ul>
-	    <li id="sub">Teaching Assistant</li>
+	    <li class="sub">Teaching Assistant</li>
 	  </ul>
 	</li>
 	<li>Advanced Topics: Quantitative Biology (2005)
 	  <ul>
-	    <li id="sub">Teaching Assistant</li>
+	    <li class="sub">Teaching Assistant</li>
 	  </ul>
 	</li>
 
@@ -282,12 +272,26 @@
       </div>
     </div>
 
+
+    
     <div class="twoColContainer">
-    <hr>
+    <hr />
       <div class="leftcol">
-	<h3>Other</h3>
+	<h3>Editorial</h3>
       </div>
       <div class="rightcol">
+        Ad-hoc reviewer for <em>Bioinformatics</em>, <em>Cancer Cell</em>, <em>Genome Biology</em>, <em>PLoS Computational Biology</em>, <em>Nucleic Acids Research</em>.<br />
+        Grant reviewer for Dutch Cancer Society (KWF Kankerbestrijding)
+      </div>
+    </div>
+
+    
+    <div class="twoColContainer">
+      <hr />
+        <div class="leftcol">
+	  <h3>Other</h3>
+        </div>
+        <div class="rightcol">
 	<ul>
 	  <li>I write about the intersection of science, technology, and culture at <a href="http://www.chrisamiller.com/science/">http://www.chrisamiller.com/science/</a></li>
 	  <li>BCM Graduate Student Council<br />
@@ -316,4 +320,4 @@ pageTracker._trackPageview();
 
 
 
-</div></body></html>
+</body></html>
