--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="title">
 	<br />
     	<h1>Chris Miller, PhD</h1>
-	<h2>Research Faculty - Division of Genomics and Bioinformatics</h2>
+	<h2>Assistant Professor - Division of Oncology</h2>
 	<h2>Cancer Analysis Group Leader - McDonnell Genome Institute</h2>
 	<h2>Washington University School of Medicine</h2>
       </div>
