--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<br />
     	<h1>Chris Miller, PhD</h1>
 	<h2>Assistant Professor - Division of Oncology</h2>
-	<h2>Cancer Analysis Group Leader - McDonnell Genome Institute</h2>
+	<h2>McDonnell Genome Institute</h2>
 	<h2>Washington University School of Medicine</h2>
       </div>
       <div id="contact">
@@ -38,9 +38,8 @@
 	<h3>About Me</h3>
       </div>
       <div class="rightcol">
-	  <p>I work in the Genome Institute at Washington University in St. Louis, 
-	     where I lead a group that develops and applies computational tools 
-	     to give us insight into the origins and progression of cancer.
+	  <p>I work in the Division of Oncology and McDonnell Genome Institute at Washington University in St. Louis, 
+	     where I develop and apply computational tools to give us insight into the origins and progression of cancer.
 	  </p>
 	  <p>My core research interests include:
       <p>
@@ -85,6 +84,18 @@
 
         <span style="font-size:x-small"><br /><em>* denotes shared first authorship</em></span>
         <ul>
+<li class="pub"><a href="http://www.sciencedirect.com/science/article/pii/S0092867417312035">Comprehensive and Integrated Genomic Characterization of Adult Soft Tissue Sarcomas</a><br />
+<span class="pubdetails">Network CGAR, <em>et al.</em>. Cell.doi:10.1016/j.cell.2017.10.014</span>
+</li>
+<li class="pub"><a href="https://academic.oup.com/annonc/advance-article-abstract/doi/10.1093/annonc/mdx517/4110375?redirectedFrom=fulltext">ClonEvol: clonal ordering and visualization in cancer sequencing</a><br />
+<span class="pubdetails">Dang H, White B, Foltz S, <strong>Miller CA</strong>, Luo J, Fields R, Maher C. Annals Of Oncology.doi:10.1093/annonc/mdx517</span>
+</li>
+<li class="pub"><a href="https://www.jci.org/articles/view/93041">Haploinsufficiency for DNA methyltransferase 3A predisposes hematopoietic cells to myeloid malignancies</a><br />
+<span class="pubdetails">Cole CB, Russler-Germain DA, Ketkar S, Verdoni AM, Smith AM, Bangert CV, Helton NM, Guo M, Klco JM, O’Laughlin S, <em>et al.</em>. The Journal Of Clinical Investigation.doi:10.1172/JCI93041</span>
+</li>
+<li class="pub"><a href="https://www.sciencedirect.com/science/article/pii/S0301472X17307014">Comprehensive discovery of noncoding RNAs in acute myeloid leukemia cell transcriptomes</a><br />
+<span class="pubdetails">Zhang J, Griffith M, <strong>Miller CA</strong>, Griffith OL, Spencer DH, Walker JR, Magrini V, McGrath SD, Ly A, Helton NM, <em>et al.</em>. Experimental Hematology.doi:10.1016/j.exphem.2017.07.008</span>
+</li>
 <li class="pub"><a href="http://www.bloodjournal.org/content/129/4/473">Recurrent somatic mutations affecting B-cell receptor signaling pathway genes in follicular lymphoma</a><br />
 <span class="pubdetails">Krysiak K, Gomez F, White BS, Matlock M, <strong>Miller CA</strong>, Trani L, Fronick CC, Fulton RS, Kreisel F, Cashen AF, <em>et al.</em>. Blood.doi:10.1182/blood-2016-07-729954</span>
 </li>
@@ -314,7 +325,7 @@
         <h3>Editorial</h3>
       </div>
       <div class="rightcol">
-        Ad-hoc reviewer for <em>Bioinformatics</em>, <em>Cancer Cell</em>, <em>Genome Biology</em>, <em>PLoS Computational Biology</em>, <em>Nucleic Acids Research</em>.<br />
+        Ad-hoc reviewer for <em>Bioinformatics</em>, <em>Cancer Cell</em>, <em>Genome Biology</em>, <em>PLoS Computational Biology</em>, <em>Nucleic Acids Research</em>, <em>Nature Communications</em>.<br />
         Grant reviewer for Dutch Cancer Society (KWF Kankerbestrijding)
       </div>
     </div>
