--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
 
         <span style="font-size:x-small"><br /><em>* denotes shared first authorship</em></span>
         <ul>
+<li class="pub"><a href="https://www.nature.com/articles/s41375-018-0193-y">Discriminating a common somatic ASXL1 mutation (c. 1934dup; p. G646Wfs* 12) from artifact in myeloid malignancies using NGS.</a><br />
+<span class="pubdetails">Alberti MO, Srivatsan SN, Shao J, McNulty SN, Chang GS, <strong>Miller CA</strong>, Dunlap JB, Yang F, Press RD, Gao Q, <em>et al.</em>. Leukemia.doi:10.1038/s41375-018-0193-y</span>
+</li>
+<li class="pub"><a href="http://www.bloodadvances.org/content/2/11/1295">A case of acute myeloid leukemia with promyelocytic features characterized by expression of a novel RARG-CPSF6 fusion</a><br />
+<span class="pubdetails"><strong>Miller CA</strong>, Tricarico C, Skidmore ZL, Uy GL, Lee Y, Hassan A, O’Laughlin MD, Schmidt H, Tian L, Duncavage EJ, <em>et al.</em>. Blood Advances.doi:10.1182/bloodadvances.2017014183</span>
+</li>
 <li class="pub"><a href="https://www.nature.com/articles/s41416-018-0089-7">Somatic mutations in benign breast disease tissue and risk of subsequent invasive breast cancer</a><br />
 <span class="pubdetails">Rohan TE, <strong>Miller CA</strong>, Li T, Wang Y, Loudig O, Ginsberg M, Glass A, Mardis E. British Journal Of Cancer.doi:10.1038/s41416-018-0089-7</span>
 </li>
