--- a/index.html
+++ b/index.html
@@ -84,6 +84,24 @@
 
         <span style="font-size:x-small"><br /><em>* denotes shared first authorship</em></span>
         <ul>
+<li class="pub"><a href="https://www.biorxiv.org/content/10.1101/501817v2.abstract">pVACtools: a computational toolkit to identify and visualize cancer neoantigens</a><br />
+<span class="pubdetails">Hundal J, Kiwala S, McMichael J, <strong>Miller CA</strong>, Wollam AT, Xia H, Liu CJ, Zhao S, Feng Y, Graubert AP, <em>et al.</em>. Biorxiv. 2019. doi:10.1101/501817</span>
+</li>
+<li class="pub"><a href="https://onlinelibrary.wiley.com/doi/full/10.1111/bjh.15681">Exome analysis of treatment-related AML after APL suggests secondary evolution.</a><br />
+<span class="pubdetails">Wang T, Jacoby MA, Duncavage EJ, <strong>Miller CA</strong>, Heath S, Rahme R, Fenaux P, Ades L, Renneville A, Cassinat B, <em>et al.</em>. British Journal Of Haematology. 2019. doi:10.1111/bjh.15681</span>
+</li>
+<li class="pub"><a href="https://www.nejm.org/doi/full/10.1056/NEJMoa1808777">Immune escape of relapsed AML cells after allogeneic transplantation</a><br />
+<span class="pubdetails">Christopher MJ, Petti AA, Rettig MP, <strong>Miller CA</strong>, Chendamarai E, Duncavage EJ, Klco JM, Helton NM, O’Laughlin M, Fronick CC, <em>et al.</em>. New England Journal Of Medicine. 2018. doi:10.1056/NEJMoa1808777</span>
+</li>
+<li class="pub"><a href="https://www.sciencedirect.com/science/article/pii/S0301472X18309809">Smc3 is required for mouse embryonic and adult hematopoiesis</a><br />
+<span class="pubdetails">Wang T, Glover B, Hadwiger G, <strong>Miller CA</strong>, di MO, Welch JS. Experimental Hematology. 2019. doi:10.1016/j.exphem.2018.11.008</span>
+</li>
+<li class="pub"><a href="http://www.haematologica.org/content/104/8/e373.long">Shared cell of origin in a patient with Erdheim-Chester disease</a><br />
+<span class="pubdetails">Ghobadi A, <strong>Miller CA</strong>, Li T, O'Laughlin M, Lee Y, Ali M, Westervelt P, DiPersio J, Wartman L. Haematologica. 2019. doi:10.3324/haematol.2019.217794</span>
+</li>
+<li class="pub"><a href="https://www.tandfonline.com/doi/full/10.1080/2162402X.2018.1561106">Detection of neoantigen-specific T cells following a personalized vaccine in a patient with glioblastoma</a><br />
+<span class="pubdetails">Johanns TM, <strong>Miller CA</strong>, Liu CJ, Perrin RJ, Bender D, Kobayashi DK, Campian JL, Chicoine MR, Dacey RG, Huang J, <em>et al.</em>. Oncoimmunology. 2019. doi:10.1080/2162402X.2018.1561106</span>
+</li>
 <li class="pub"><a href="https://www.nejm.org/doi/full/10.1056/NEJMoa1804714">Mutation clearance after transplantation for myelodysplastic syndrome</a><br />
 <span class="pubdetails">Duncavage EJ, Jacoby MA, Chang GS, <strong>Miller CA</strong>, Edwin N, Shao J, Elliott K, Robinson J, Abel H, Fulton RS, <em>et al.</em>. New England Journal Of Medicine. 2018. doi:10.1056/NEJMoa1804714</span>
 </li>
