missed a co-first pub

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <span class="pubdetails">Wang T, Glover B, Hadwiger G, <strong>Miller CA</strong>, di MO, Welch JS. Experimental Hematology. 2019. doi:10.1016/j.exphem.2018.11.008</span>
 </li>
 <li class="pub"><a href="http://www.haematologica.org/content/104/8/e373.long">Shared cell of origin in a patient with Erdheim-Chester disease</a><br />
-<span class="pubdetails">Ghobadi A, <strong>Miller CA</strong>, Li T, O'Laughlin M, Lee Y, Ali M, Westervelt P, DiPersio J, Wartman L. Haematologica. 2019. doi:10.3324/haematol.2019.217794</span>
+<span class="pubdetails">Ghobadi A*, <strong>Miller CA*</strong>, Li T, O'Laughlin M, Lee Y, Ali M, Westervelt P, DiPersio J, Wartman L. Haematologica. 2019. doi:10.3324/haematol.2019.217794</span>
 </li>
 <li class="pub"><a href="https://www.tandfonline.com/doi/full/10.1080/2162402X.2018.1561106">Detection of neoantigen-specific T cells following a personalized vaccine in a patient with glioblastoma</a><br />
 <span class="pubdetails">Johanns TM, <strong>Miller CA</strong>, Liu CJ, Perrin RJ, Bender D, Kobayashi DK, Campian JL, Chicoine MR, Dacey RG, Huang J, <em>et al.</em>. Oncoimmunology. 2019. doi:10.1080/2162402X.2018.1561106</span>
