--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 
         <span style="font-size:x-small"><br /><em>* denotes shared first authorship</em></span>
         <ul>
+<li class="pub"><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7286679/">The clonal evolution of metastatic colorectal cancer</a><br />
+<span class="pubdetails">Dang HX, Krasnick BA, White BS, Grossman JG, Strand MS, Zhang J, Cabanski CR, <strong>Miller CA</strong>, Fulton RS, Goedegebuure SP, <em>et al.</em>. Science Advances. 2020. doi: 10.1126/sciadv.aay9691 </span>
+</li>
 <li class="pub"><a href="https://www.mdpi.com/2073-4425/11/5/499">Unmasking Intra-tumoral Heterogeneity and Clonal Evolution in NF1-MPNST</a><br />
 <span class="pubdetails">Moon C, Tompkins W, Wang Y, Godec A, Zhang X, Pipkorn P, <strong>Miller CA</strong>, Dehner C, Dahiya S, Hirbe AC. Genes. 2020. doi: 10.3390/genes11050499</span>
 </li>
