--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
 
         <span style="font-size:x-small"><br /><em>* denotes shared first authorship</em></span>
         <ul>
+<li class="pub"><a href="https://insight.jci.org/articles/view/138734">HPV transcript expression affects cervical cancer response to chemoradiation</a><br />
+<span class="pubdetails">Ruiz FJ, Inkman M, Rashmi R, Muhammad N, Gabriel N, <strong>Miller CA</strong>, McLellan MD, Goldstein M, Markovina S, Grigsby PW, <em>et al.</em>. Jci Insight. 2021. doi:10.1172/jci.insight.138734</span>
+</li>
+<li class="pub"><a href="https://arxiv.org/abs/2107.12817">Bam-readcount-rapid generation of basepair-resolution sequence metrics</a><br />
+<span class="pubdetails">Khanna A, Larson DE, Srivatsan SN, Mosior M, Abbott TE, Kiwala S, Ley TJ, Duncavage EJ, Walter MJ, Walker JR, <em>et al.</em>. Arxiv. 2021. doi:arXiv:2107.12817</span>
+</li>
 <li class="pub"><a href="https://www.biorxiv.org/content/10.1101/2021.08.04.455117v1">Kdm6a Deficiency Restricted to Mouse Hematopoietic Cells Causes an Age-and Sex-dependent Myelodysplastic Syndrome-Like Phenotype</a><br />
 <span class="pubdetails">Tian L, Chavez M, Chang GS, Helton NM, Katerndahl CD, <strong>Miller CA</strong>, Wartman L. Biorxiv. 2021. doi:10.1101/2021.08.04.455117</span>
 </li>
@@ -93,8 +99,11 @@
 <li class="pub"><a href="https://www.sciencedirect.com/science/article/pii/S0006497121012349">Tumor suppressor function of Gata2 in Acute Promyelocytic Leukemia</a><br />
 <span class="pubdetails">Katerndahl CD, Rogers OR, Day RB, Cai MA, Rooney TP, Helton NM, Hoock M, Ramakrishnan SM, Srivatsan SN, Wartman LD, <em>et al.</em>. Blood. 2021. doi:10.1182/blood.2021011758</span>
 </li>
-<li class="pub"><a href="https://arxiv.org/abs/2107.12817">Bam-readcount-rapid generation of basepair-resolution sequence metrics</a><br />
-<span class="pubdetails">Khanna A, Larson DE, Srivatsan SN, Mosior M, Abbott TE, Kiwala S, Ley TJ, Duncavage EJ, Walter MJ, Walker JR, <em>et al.</em>. Arxiv. 2021. doi:arXiv:2107.12817</span>
+<li class="pub"><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8026192/">Chromosome 8 gain is associated with high-grade transformation in MPNST</a><br />
+<span class="pubdetails">Dehner C, Moon CI, Zhang X, Zhou Z, <strong>Miller CA</strong>, Xu H, Wan X, Yang K, Mashl J, Gosline SJ, <em>et al.</em>. Jci Insight. 2021. doi:10.1172/jci.insight.146351</span>
+</li>
+<li class="pub"><a href="https://insight.jci.org/articles/view/138734">HPV transcript expression affects cervical cancer response to chemoradiation</a><br />
+<span class="pubdetails">Ruiz FJ, Inkman M, Rashmi R, Muhammad N, Gabriel N, <strong>Miller CA</strong>, McLellan MD, Goldstein M, Markovina S, Grigsby PW, <em>et al.</em>. Jci Insight. 2021. 10.1172/jci.insight.138734</span>
 </li>
 <li class="pub"><a href="https://www.biorxiv.org/content/10.1101/2021.03.03.433799v2.abstract">Genome-wide analysis of focal DNA hypermethylation in IDH-mutant AML samples</a><br />
 <span class="pubdetails">Wilson ER, Helton N, Heath SE, Fulton RS, <strong>Miller CA</strong>, Payton JE, Welch JS, Walter M, Westervelt P, DiPersio JF, <em>et al.</em>. Biorxiv. 2021. doi:10.1101/2021.03.03.433799 </span>
@@ -110,6 +119,12 @@
 </li>
 <li class="pub"><a href="https://www.sciencedirect.com/science/article/pii/S0092867420311569">Key parameters of tumor epitope immunogenicity revealed through a consortium approach improve neoantigen prediction</a><br />
 <span class="pubdetails">Wells DK, van BMM, Dang KK, Hubbard-Lucey VM, Sheehan KC, Campbell KM, Lamb A, Ward JP, Sidney J, Blazquez AB, <em>et al.</em>. Cell. 2020. doi:10.1016/j.cell.2020.09.015</span>
+</li>
+<li class="pub"><a href="https://www.biorxiv.org/content/10.1101/2020.06.20.151035v1.abstract">U2AF1 is a haplo-essential gene required for cancer cell survival</a><br />
+<span class="pubdetails">Wadugu BA, Heard A, Srivatsan SN, Alberti MO, Ndonwi M, Grieb S, Bradley J, Shao J, Ahmed T, Shirai CL, <em>et al.</em>. Biorxiv. 2020. doi:10.1101/2020.06.20.151035</span>
+</li>
+<li class="pub"><a href="https://www.biorxiv.org/content/10.1101/2020.12.08.416271v1.abstract">Accurate neoantigen prediction depends on mutation position relative to patient allele-specific MHC anchor location</a><br />
+<span class="pubdetails">Xia H, McMichael JF, Supabphol S, Richters MM, Basu A, Ramirez CA, Puig-Saus C, Cotto KC, Hundal J, Kiwala S, <em>et al.</em>. Biorxiv. 2020. doi:10.1101/2020.12.08.416271</span>
 </li>
 <li class="pub"><a href="https://www.nature.com/articles/s41598-020-71300-7">HPV-EM: an accurate HPV detection and genotyping EM algorithm</a><br />
 <span class="pubdetails">Inkman MJ, Jayachandran K, Ellis TM, Ruiz F, McLellan MD, <strong>Miller CA</strong>, Wu Y, Ojesina AI, Schwarz JK, Zhang J. Scientific Reports. 2020. doi:10.1038/s41598-020-71300-7</span>
@@ -255,8 +270,14 @@
 <li class="pub"><a href="http://www.sciencedirect.com/science/article/pii/S0301472X16301151">Comprehensive genomic analysis reveals FLT3 activation and a therapeutic strategy for a patient with relapsed adult B-lymphoblastic leukemia</a><br />
 <span class="pubdetails">Griffith M, Griffith OL, Krysiak K, Skidmore ZL, Christopher MJ, Klco JM, Ramu A, Lamprecht TL, Wagner AH, Campbell KM, <em>et al.</em>. Experimental Hematology. 2016. doi:10.1016/j.exphem.2016.04.011</span>
 </li>
+<li class="pub"><a href="http://symposium.cshlp.org/content/81/105.full">Cancer immunogenomics: computational neoantigen identification and vaccine design</a><br />
+<span class="pubdetails">Hundal J, <strong>Miller CA</strong>, Griffith M, Griffith OL, Walker J, Kiwala S, Graubert A, McMichael J, Coffman A, Mardis ER. . 2016. 10.1101/sqb.2016.81.030726</span>
+</li>
 <li class="pub"><a href="http://onlinelibrary.wiley.com/doi/10.1111/bpa.12364/abstract">ATRX in diffuse gliomas with its mosaic/heterogeneous expression in a subset</a><br />
 <span class="pubdetails">Purkait S, <strong>Miller CA</strong>, Kumar A, Sharma V, Pathak P, Jha P, Sharma MC, Suri V, Suri A, Sharma B, <em>et al.</em>. Brain Pathology. 2016. doi:10.1111/bpa.12364</span>
+</li>
+<li class="pub"><a href="https://www.nature.com/articles/ncomms13294">Impact of mutational profiles on response of primary oestrogen receptor-positive breast cancers to oestrogen deprivation</a><br />
+<span class="pubdetails">Gellert P, Segal CV, Gao Q, L{\'o}pez-Knowles E, Martin L, Dodson A, Li T, <strong>Miller CA</strong>, Lu C, Mardis ER, <em>et al.</em>. Nature Communications. 2016. doi:c10.1038/ncomms13294</span>
 </li>
 <li class="pub"><a href="http://molecularcasestudies.cshlp.org/content/2/1/a000687.short">A common founding clone with TP53 and PTEN mutations gives rise to a concurrent germ cell tumor and acute megakaryoblastic leukemia</a><br />
 <span class="pubdetails">Lu C, Riedell P, <strong>Miller CA</strong>, Hagemann IS, Westervelt P, Ozenberger BA, O'Laughlin M, Magrini V, Demeter RT, Duncavage EJ, <em>et al.</em>. Molecular Case Studies. 2016. doi:10.1101/mcs.a000687</span>
